# Ge-Python

Assignments/Dikshitha Modi/Backend Development/Backend Development/Fast API/: FastAPI.docx  hello_fastapi.py  jwt_authentication.py  main.py  product_search.py  todo.py  user_reg_val.py
Assignments/Dikshitha Modi/Backend Development/Backend Development/FastAPI/: book_information_system.py  file_upload_service.py  simple_calculator.py
Assignments/Dikshitha Modi/Core Python Programming/OO Programming/Address Book Problem/: address_book.py  address_book_main.py  contact.py  uc1.py  uc10.py  uc11.py  uc12.py  uc13.py  uc2.py  uc3.py  uc4.py  uc5.py  uc6.py  uc7.py  uc8.py  uc9.py
Assignments/Dikshitha Modi/Core Python Programming/Regex,Text Processing,Unit Processing/Functionality Developed/Student Registration Validation/student_reg_toolkit/: README.md  pyproject.toml
Assignments/Dikshitha Modi/Core Python Programming/Regex,Text Processing,Unit Processing/Functionality Developed/Student Registration Validation/student_reg_toolkit/src/student_reg_toolkit/: __init__.py  utils.py
Assignments/Dikshitha Modi/Core Python Programming/Regex,Text Processing,Unit Processing/Functionality Developed/Student Registration Validation/student_reg_toolkit/tests/: test_validators.py
Assignments/Dikshitha Modi/Prompt Engineering/genai_assisgnment/: README.md  email_validation.py  refactor.py  test_utils.py  utils.py
Assignments/Dikshitha Modi/Walmart Analytics Project/Walmart/: README.md
Assignments/Dikshitha Modi/Walmart Analytics Project/Walmart/app/: main.py
(+291 files in other folders)
