[project]
name = "student-reg-toolkit"
version = "0.1.0"
description = "A comprehensive toolkit for student registration validation and processing."
authors = [
	{ name = "Your Name", email = "your.email@example.com" },
]
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
		"Programming Language :: Python :: 3",
		"License :: OSI Approved :: MIT License",
		"Operating System :: OS Independent",
]
dependencies = []
[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
reg-validate = "student_reg_toolkit.validators:main_cli"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
